airdrop-as-a-service/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: airdrop-as-a-service
  namespace: airdrop
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: airdrop-as-a-service
  type: ClusterIP
status:
  loadBalancer: {}
