airdrop-as-a-service/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: $request_uri
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: airdrop-as-a-service
  namespace: airdrop-as-service
spec:
  rules:
  - host: airdrop-as-service.solgames.fun
    http:
      paths:
      - backend:
          service:
            name: airdrop-as-a-service
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
